2009-06-21  Marcus Meissner  <marcus@jet.franken.de>

	* main.c,action.c,shell.c: 
	  Added seperate --set-config-index and --set-config-value functions
	  for menu choice settings.

	* main.c: Save files with current umask, not 0600.

2009-04-10  Marcus Meissner  <marcus@jet.franken.de>

	* main.c: --wait-event=x now can wait for "x" events,
	  or 1 second timeouts. (so longest wait time will be "x" seconds).
	* main.c: --trigger-capture to trigger the camera capture
	* main.c: --capture-image, --capture-image-and-download:
	  added a second implementation using "trigger capture" and "wait event".

	* actions.c: ctrl-c can abort tethered capture now
	* main.c: --capture made more quiet on --quiet

2008-12-04  T E Dixon  <https://sourceforge.net/users/dixonte/>

	* main.c: Allow graceful exiting interval capture with SIGUSR2.

2008-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/main.c: Allow to specify a camera by port.

	  For instance:
		gphoto2 --port usb:005,003 --capture-image


2008-05-24  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main.c,main.h,shell.c}:

	  --capture-image split into:

		--capture-image: just capture the image
		--capture-image-and-download:
			capture the image and download it.

2007-10-28  Dan Fandrich  <dan@coneharvesters.com>
	    Marcus Meissner  <marcus@jet.franken.de>
	* tests/**: Start of a testsuite from Dan.

	  Integrated into automake framework and fixed
	  bugs shown by "make distcheck"

2007-07-21  Marcus Meissner  <marcus@jet.franken.de>

	* implemented --capture-tethered 

2007-01-19  Marcus Meissner  <marcus@jet.franken.de>

	From Victor Wagner <vbwagner@users.sourceforge.net>
	* gphoto2/main.c: read hook script and
	  filename from settings file.

2006-11-25  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: version post 2.3.0 because 2.3.0 has
	been branched.

2006-03-23  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main,action}.{ch}: Added